[package]
name = "bcc-sys"
version = "0.9.3-alpha.0"
authors = ["Zhiting Zhu <zhitingz@cs.utexas.edu>", "Brian Martin <brayniac@gmail.com>"]
description = "Rust binding to BPF Compiler Collection (BCC)"
keywords = ["bpf", "bindings"]
license = "Apache-2.0"
repository = "https://github.com/rust-bpf/bcc-sys"
build = "build.rs"
readme = "README.md"
links = "bcc"
documentation = "https://docs.rs/bcc-sys"
homepage = "https://github.com/rust-bpf/bcc-sys"
edition = '2018'

[build-dependencies.bindgen]
version = "0.49.1"
optional = true

[lib]
name = "bcc_sys"

[features]
generate = ["bindgen"]
static = []
v0_4_0 = []
v0_5_0 = []
v0_6_0 = []
v0_6_1 = []
v0_7_0 = []
v0_8_0 = []
v0_9_0 = []
