[package]
name = "bcc-sys"
version = "0.18.1-alpha.0"
authors = ["Zhiting Zhu <zhitingz@cs.utexas.edu>", "Brian Martin <bmartin@twitter.com>"]
description = "Rust binding to BPF Compiler Collection (BCC)"
keywords = ["bpf", "bindings"]
license = "Apache-2.0"
repository = "https://github.com/rust-bpf/bcc-sys"
build = "build.rs"
readme = "README.md"
links = "bcc"
documentation = "https://docs.rs/bcc-sys"
homepage = "https://github.com/rust-bpf/bcc-sys"
edition = '2018'

[build-dependencies.bindgen]
version = "0.57.0"
optional = true

[lib]
name = "bcc_sys"

[features]
generate = ["bindgen"]
llvm_8 = ["specific_llvm"]
llvm_9 = ["specific_llvm"]
specific = []
specific_llvm = []
static = []
v0_4_0 = ["specific"]
v0_5_0 = ["specific"]
v0_6_0 = ["specific"]
v0_6_1 = ["specific"]
v0_7_0 = ["specific"]
v0_8_0 = ["specific"]
v0_9_0 = ["specific"]
v0_10_0 = ["specific"]
v0_11_0 = ["specific"]
v0_12_0 = ["specific"]
v0_13_0 = ["specific"]
v0_14_0 = ["specific"]
v0_15_0 = ["specific"]
v0_16_0 = ["specific"]
v0_17_0 = ["specific"]
v0_18_0 = ["specific"]
v0_19_0 = ["specific"]
